testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceToImportOfFunctionExpression.errors.txt
MC.js(6,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
MW.js(1,15): error TS1340: Module './MC' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./MC')'?
MW.js(12,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== MC.js (1 errors) ====
    const MW = require("./MW");
    
    /** @typedef {number} Meyerhauser */
    
    /** @class */
    module.exports = function MC() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        /** @type {any} */
    ~~~~~~~~~~~~~~~~~~~~~~
        var x = {}
    ~~~~~~~~~~~~~~
        return new MW(x);
    ~~~~~~~~~~~~~~~~~~~~~
    };
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
==== MW.js (2 errors) ====
    /** @typedef {import("./MC")} MC */
                  ~~~~~~~~~~~~~~
!!! error TS1340: Module './MC' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./MC')'?
    
    class MW {
      /**
       * @param {MC} compiler the compiler
       */
      constructor(compiler) {
        this.compiler = compiler;
      }
    }
    
    module.exports = MW;
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    